--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+.chart-wrapper{
+  border: 2px solid black;
+  border-radius: 5px;
+}
