--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  padding: 0;
 }
 
 a {
@@ -25,10 +26,9 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+
+
+
 }
 
 h1 {
@@ -58,7 +58,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #e4ede9;
   }
   a:hover {
     color: #747bff;
@@ -70,4 +70,17 @@ button:focus-visible {
 .chart-wrapper{
   border: 2px solid black;
   border-radius: 5px;
+ 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 600px;
+  margin: 0;
+}
+main {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
 }
