--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #e4ede9;
+    background-color: #e8e5e5;
   }
   a:hover {
     color: #747bff;
